WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287361
Invalidate table borders with writing mode changes
https://bugs.webkit.org/show_bug.cgi?id=287361
Summary
Invalidate table borders with writing mode changes
Ahmad Saleem
Reported
2025-02-09 06:47:22 PST
ssia - this is to progress relevant WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-09 06:48:03 PST
<
rdar://problem/144479912
>
Ahmad Saleem
Comment 2
2025-02-09 06:55:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40313
EWS
Comment 3
2025-02-10 07:02:32 PST
Committed
290160@main
(80f5cfefbfe9): <
https://commits.webkit.org/290160@main
> Reviewed commits have been landed. Closing PR #40313 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug