Invalidate table borders with writing mode changes

https://bugs.webkit.org/show_bug.cgi?id=287361
rdar://144479912

Reviewed by Tim Nguyen.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

In this patch, we ensure that we invalidate collapsed table borders whenever
writing mode changes by updating 'borderIsEquivalentForPainting'.

Credits to Tim Nguyen for help in coming up with proper fix.

* Source/WebCore/rendering/style/RenderStyleInlines.h:
(borderIsEquivalentForPainting):
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/border-writing-mode-dynamic-001-expected.txt:

Canonical link: https://commits.webkit.org/290160@main